2009-11-04 Niall Power - <niall.power@sun.com>

	* VERSION: bump to 0.2.95
	* Move to python2.6
	* Drop dependency on zfs-auto-snapshot methods and implement our own
	  snapshotting mechanism in the form of time-sliderd
	* Add dbus system bus notification and notification applet, replacing
	  the previous ugly hack of su to logged in user ID and running
	  notify-send.
	* Enhance all .py modules to use python subprocess module when spawning
	  commands instead of os.popen.
	* Add SMF manifest for system/filesystem/auto-snapshot to replace 
	  systems snapshot configuration previously supplied by
	  zfs-auto-snapshot. Generally compatible but cleaned up by dropping
	  some of zfs-auto-snapshot's more quirky or deprecated configuration
	  options.

2009-07-08 Niall Power - <niall.power@sun.com>

	* VERSION: bump to 0.2.10
	* Fix defect 8667 in following source files:
	* usr/share/time-slider/lib/time_slider/cleanupmanager.py: Refactor
	  code to modified zfs.py APIs, remove some dead code, make capacity
	  checks conditional where possible.
	* usr/share/time-slider/lib/time_slider/deletegui.py: minor code 
	  refactoring to match zfs.py API changes.
	* usr/share/time-slider/lib/time_slider/setupgui.py: Remove references
	  to zfscontroller module which has been removed. Uses zfs.py 
	  exclusively now. Refactor for zfs.py changes
	* usr/share/time-slider/lib/time_slider/zfscontroller.py: removed.
	  Very little functionality and nothing that shouldn't be in zfs.py
	* usr/share/time-slider/lib/time_slider/zfs/py: New class definition
	  for "Datasets" which stores all system snapshots, filesystems and
	  volumes in a cache. Existing Dataset, Filesystem, Snapshot and Volume
	  class methods now use the global Datasets cache for querying and
	  listing instead of making zfs(1m) spawned commands.

2009-05-18 Niall Power - <niall.power@sun.com>

        * usr/share/time-slider/lib/time_slider/cleanupmanager.py