@@ -344,11 +344,13 @@ class SnapshotManager(threading.Thread):
                                  " recalculation")
                     continue
                 self.__debug("Recalculating %s schedule" % (schedule))
-                snap_tm = time.gmtime(self._last[schedule]) 
+                snap_tm = time.gmtime(self._last[schedule])
+                # Increment year if frequency is less than 1 calender year.
                 year = snap_tm.tm_year + int(period / 12)
-                mon = (snap_tm.tm_mon + period) % 12
-                if mon < snap_tm.tm_mon:
-                    #Crossed a year boundary
+                if snap_tm.tm_mon + period <= 12:
+                    mon = snap_tm.tm_mon + period
+                else: # Next snapshot in schedule crosses a year boundary
+                    mon = (snap_tm.tm_mon + period) % 12
                     year += 1
                 d,dlastmon = calendar.monthrange(snap_tm.tm_year, snap_tm.tm_mon)
                 d,dnewmon = calendar.monthrange(year, mon)
